# ffgl

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  Specification.html  readme2.txt  vcpkg.json
cmake/: ffgl-sdk-config.cmake
source/: _clang-format
source/ffgl/: FFGLFBO.h  FFGLPluginManager.cpp  FFGLShader.cpp  FreeFrame.h
source/ffgl/utilities/: FFGLFBO.h  FFGLShader.cpp  utilities.h
source/lib/: FFGLSDK.cpp  FFGLSDK.h
source/lib/ffgl/: FFGL.cpp  FFGL.h  FFGLExtensions.cpp  FFGLExtensions.h  FFGLFBO.cpp  FFGLFBO.h  FFGLLib.h  FFGLLog.cpp  FFGLLog.h  FFGLPlatform.h  FFGLPluginInfo.cpp  FFGLPluginInfo.h  FFGLPluginInfoData.cpp  FFGLPluginManager.cpp  FFGLPluginManager.h  FFGLPluginManager_inl.h  FFGLPluginSDK.cpp  FFGLPluginSDK.h  FFGLShader.cpp  FFGLShader.h  FFGLThumbnailInfo.cpp  FFGLThumbnailInfo.h  FreeFrame.h
source/lib/ffgl/utilities/: utilities.cpp  utilities.h
source/lib/ffglex/: FFGLFBO.cpp  FFGLFBO.h  FFGLScopedBufferBinding.cpp  FFGLScopedBufferBinding.h  FFGLScopedFBOBinding.cpp  FFGLScopedFBOBinding.h  FFGLScopedRenderBufferBinding.cpp  FFGLScopedRenderBufferBinding.h  FFGLScopedSamplerActivation.cpp  FFGLScopedSamplerActivation.h  FFGLScopedShaderBinding.cpp  FFGLScopedShaderBinding.h  FFGLScopedTextureBinding.cpp  FFGLScopedTextureBinding.h  FFGLScopedVAOBinding.cpp  FFGLScopedVAOBinding.h  FFGLScreenQuad.cpp  FFGLScreenQuad.h  FFGLShader.cpp  FFGLShader.h  FFGLUtilities.cpp  FFGLUtilities.h
source/lib/ffglquickstart/: Audio.cpp  Audio.h  Effect.cpp  Effect.h  FFGLAudio.cpp  FFGLAudio.h  FFGLEffect.cpp  FFGLEffect.h  FFGLMixer.cpp  FFGLMixer.h  FFGLParam.cpp  FFGLParam.h  FFGLParamBool.cpp  FFGLParamBool.h  FFGLParamEvent.cpp  FFGLParamEvent.h  FFGLParamFFT.cpp  FFGLParamFFT.h  FFGLParamOption.cpp  FFGLParamOption.h  FFGLParamRange.cpp  FFGLParamRange.h  FFGLParamText.cpp  FFGLParamText.h  FFGLParamTrigger.cpp  FFGLParamTrigger.h  FFGLParams.h  FFGLPlugin.cpp  FFGLPlugin.h  FFGLRandom.cpp  FFGLRandom.h  FFGLSmoothValue.cpp  FFGLSmoothValue.h  FFGLSource.cpp  FFGLSource.h  FFGLUtils.h  Mixer.cpp  Mixer.h  Params.h  Plugin.cpp  (+4 more)
source/lib/glee/: GLee.c
source/lib/glsdk_0_5_2/glload/include/: _int_glx_exts.h  _int_glx_exts.hpp  _int_glx_type.h  _int_glx_type.hpp  gl_all.h  gl_all.hpp  gl_core.h  gl_core.hpp
source/lib/glsdk_0_5_2/glload/source/: gl_load.c  wgl_load.c
source/plugins/: CMakeLists.txt
source/plugins/Add/: Add.cpp  Add.h  CMakeLists.txt
source/plugins/AddSubtract/: AddSubtract.cpp  AddSubtract.h  CMakeLists.txt
source/plugins/Alea/: Alea.cpp  Alea.h
source/plugins/BGR/: BGR.cpp  BGR.h
source/plugins/BarrelBlur/: BarrelBlur.cpp  BarrelBlur.h
source/plugins/Bloom/: Bloom.cpp  Bloom.h
source/plugins/Cinder/: FFGLCinder.cpp  FFGLCinder.h
source/plugins/Cloner/: Cloner.cpp  Cloner.h
source/plugins/CustomThumbnail/: CMakeLists.txt  CustomThumbnail.cpp  CustomThumbnail.h  PNGLoader.cpp  PNGLoader.h  Thumb.h
source/plugins/CustomThumbnail/lpng1637/: libpng16_static.lib  libpng16_staticd.lib
source/plugins/CustomThumbnail/zlib-1.2.11/: zlibstatic.lib  zlibstaticd.lib
source/plugins/DigiGlitch/: DigiGlitch.cpp  DigiGlitch.hpp
source/plugins/Dissolve/: Dissolve.cpp  Dissolve.h
source/plugins/Events/: CMakeLists.txt  FFGLEvents.cpp  FFGLEvents.h
source/plugins/Fireworks/: Fireworks.cpp  Fireworks.h  PSystem.h  Plugin.cpp  Plugin.h  Vec3.h  particleImg.h
source/plugins/FirstTriangle/: FirstTriangle.cpp  FirstTriangle.hpp
source/plugins/GameOfLife/: GameOfLife.cpp  GameOfLife.h
source/plugins/Gradient/: Gradient.cpp  Gradient.h
source/plugins/Gradients/: CMakeLists.txt  FFGLGradients.cpp  FFGLGradients.h
source/plugins/Mixer1/: AddBlending.cpp  AddBlending.h  Mixer1.cpp  Mixer1.h
source/plugins/MovingGradient/: MovingGradient.cpp  MovingGradient.h
source/plugins/Particles/: CMakeLists.txt  Constants.cpp  Constants.h  GLResources.cpp  GLResources.h  Particles.cpp  Particles.h
source/plugins/Particles/shaders/: fsDebugRender.h  fsRender.h  gsRender.h  vsDebugRender.h  vsRender.h  vsUpdate.h
source/plugins/Polygon/: Polygon.cpp  Polygon.h
source/plugins/Scanline/: Scanline.cpp  Scanline.h
source/plugins/Screenshake/: Screenshake.cpp  Screenshake.h
source/plugins/SimpleSource/: SimpleSource.cpp  SimpleSource.h
source/plugins/SmoothnessTester/: SmoothnessTester.cpp  SmoothnessTester.h  bar.h.glsl
source/plugins/StroboBeat/: StroboBeat.cpp  StroboBeat.h
source/plugins/Wobble/: Wobble.cpp  Wobble.h
